// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render LiftsPage with props 1`] = `
<div
  className="page--with-side-nav"
>
  <SideNav
    path="/lifts"
  />
  <div
    className="lifts-page side-nav__page-content"
  >
    <div
      className="side-nav__page-scrim side-nav__page-scrim--hidden"
      onKeyPress={[Function]}
      role="presentation"
    />
    <Tabs
      activeIndex={0}
      handleSelect={[Function]}
      labels={
        Array [
          "Bench Press",
          "Deadlift",
          "Overhead Press",
          "Row",
          "Squat",
        ]
      }
    >
      <div
        className="card lifts-page__line-graph"
      >
        <h2>
          Weight Over Time
        </h2>
        <LineGraph
          data={
            Array [
              Object {
                "date": "2020-02-06T18:41:49.124Z",
                "result": 2,
                "weight": 85,
              },
            ]
          }
        />
      </div>
      <LiftCard
        formIsOpen={false}
        lift="bench"
        toggleForm={[Function]}
        updateWeight={[Function]}
        weights={
          Object {
            "bench": 85,
            "chinup": Object {
              "negatives": 2,
              "ups": 3,
              "weight": 0,
            },
            "deadlift": 106,
            "overhead": 112,
            "row": 115,
            "squat": 156,
          }
        }
      />
    </Tabs>
  </div>
</div>
`;

exports[`should render LiftsPage without props 1`] = `
<div
  className="page--with-side-nav"
>
  <SideNav
    path=""
  />
  <div
    className="lifts-page side-nav__page-content"
  >
    <div
      className="side-nav__page-scrim side-nav__page-scrim--hidden"
      onKeyPress={[Function]}
      role="presentation"
    />
    <Tabs
      activeIndex={0}
      handleSelect={[Function]}
      labels={
        Array [
          "Bench Press",
          "Deadlift",
          "Overhead Press",
          "Row",
          "Squat",
        ]
      }
    >
      <div
        className="card lifts-page__line-graph"
      >
        <h2>
          Weight Over Time
        </h2>
        <LineGraph
          data={Array []}
        />
      </div>
      <LiftCard
        formIsOpen={false}
        lift="bench"
        toggleForm={[Function]}
        updateWeight={[Function]}
        weights={
          Object {
            "bench": 0,
            "chinup": Object {},
            "deadlift": 0,
            "overhead": 0,
            "row": 0,
            "squat": 0,
          }
        }
      />
    </Tabs>
  </div>
</div>
`;
